feat: first commit

--- a/src/App.less
+++ b/src/App.less
@@ -36,3 +36,22 @@
     transform: rotate(360deg);
   }
 }
+
+.post-preview-card {
+  width: 80vw;
+  border: solid 1px #ddd;
+  margin: 0 auto 20px;
+  padding: 10px;
+  box-sizing: border-box;
+  text-align: left;
+  cursor: pointer;
+  transition: all ease .1s;
+  &:hover {
+    box-shadow: 2px 2px 4px #ddd;
+  }
+}
+
+.post-container {
+  text-align: center;
+  -webkit-overflow-scrolling: touch;
+}
